Added translations for PhonebookActions; Added representation-property to thing types
Signed-off-by: Christoph Weitkamp <github@christophweitkamp.de>