@@ -13,12 +13,9 @@
  */
 package org.smarthomej.binding.tr064.internal;
 
-import static org.smarthomej.binding.tr064.internal.Tr064BindingConstants.THING_TYPE_SUBDEVICE;
-import static org.smarthomej.binding.tr064.internal.Tr064BindingConstants.THING_TYPE_SUBDEVICE_LAN;
+import static org.smarthomej.binding.tr064.internal.Tr064BindingConstants.*;
 
-import java.util.Collections;
 import java.util.Date;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -46,7 +43,7 @@ import org.smarthomej.binding.tr064.internal.dto.scpd.root.SCPDDeviceType;
 @NonNullByDefault
 public class Tr064DiscoveryService extends AbstractDiscoveryService implements ThingHandlerService {
     private static final int SEARCH_TIME = 5;
-    public static final Set<ThingTypeUID> SUPPORTED_THING_TYPES = Collections.singleton(THING_TYPE_SUBDEVICE);
+    public static final Set<ThingTypeUID> SUPPORTED_THING_TYPES = Set.of(THING_TYPE_SUBDEVICE);
 
     private final Logger logger = LoggerFactory.getLogger(Tr064DiscoveryService.class);
     private @Nullable Tr064RootHandler bridgeHandler;
@@ -103,13 +100,12 @@ public class Tr064DiscoveryService extends AbstractDiscoveryService implements T
                 }
                 ThingUID thingUID = new ThingUID(thingTypeUID, bridgeUID, UIDUtils.encode(udn));
 
-                Map<String, Object> properties = new HashMap<>(2);
-                properties.put("uuid", udn);
-                properties.put("deviceType", device.getDeviceType());
-
-                DiscoveryResult result = DiscoveryResultBuilder.create(thingUID).withLabel(device.getFriendlyName())
-                        .withBridge(bridgeHandler.getThing().getUID()).withProperties(properties)
-                        .withRepresentationProperty("uuid").build();
+                DiscoveryResult result = DiscoveryResultBuilder.create(thingUID) //
+                        .withLabel(device.getFriendlyName()) //
+                        .withBridge(bridgeUID) //
+                        .withProperties(Map.of("uuid", udn, "deviceType", device.getDeviceType())) //
+                        .withRepresentationProperty("uuid") //
+                        .build();
                 thingDiscovered(result);
             }
         });
